@@ -6,7 +6,7 @@
 	<groupId>ca.uhn.hapi.fhir</groupId>
 	<artifactId>hapi-fhir</artifactId>
 	<packaging>pom</packaging>
-	<version>4.1.0-SNAPSHOT</version>
+	<version>5.0.0-SNAPSHOT</version>
 	<name>HAPI-FHIR</name>
 	<description>An open-source implementation of the FHIR specification in Java.</description>
 	<url>https://hapifhir.io</url>
@@ -76,14 +76,14 @@
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
-					<artifactId>hamcrest-core</artifactId>
 					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>java-hamcrest</artifactId>
+			<artifactId>hamcrest</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -100,19 +100,32 @@
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>grahamegrieve</id>
+			<name>Grahame Grieve</name>
+			<organization>Health Intersections</organization>
+		</developer>
+		<developer>
 			<id>dmuylwyk</id>
 			<name>Diederik Muylwyk</name>
 			<organization>Smile CDR</organization>
 		</developer>
 		<developer>
+			<id>fil512</id>
+			<name>Ken Stevens</name>
+			<organization>Smile CDR</organization>
+		</developer>
+		<developer>
+			<id>yogthos</id>
 			<name>Dmitri Sotnikov</name>
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id></id>
 			<name>Lisa Wong</name>
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>jmandel</id>
 			<name>Josh Mandel</name>
 			<organization>Boston Children's Hospital</organization>
 		</developer>
@@ -122,10 +135,12 @@
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>t106uhn</id>
 			<name>Neal Acharya</name>
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>davidhay25</id>
 			<name>David Hay</name>
 			<organization>Orion Health</organization>
 		</developer>
@@ -554,6 +569,7 @@
 		</developer>
 		<developer>
 			<id>jaferkhan</id>
+			<name>Jafer Khan Shamshad</name>
 		</developer>
 		<developer>
 			<id>CodeAndChoke</id>
@@ -571,6 +587,52 @@
 			<id>jiaola</id>
 			<name>Dazhi Jiao</name>
 		</developer>
+		<developer>
+			<id>dionmcm</id>
+		</developer>
+		<developer>
+			<id>ttntrifork</id>
+			<organization>Trifork</organization>
+			<name>Tue Toft Nørgård</name>
+		</developer>
+		<developer>
+			<id>augla</id>
+			<name>August Langhout</name>
+		</developer>
+		<developer>
+			<id>dgileadi</id>
+			<name>David Gileadi</name>
+		</developer>
+		<developer>
+			<id>ibrohimislam</id>
+			<name>Ibrohim Kholilul Islam</name>
+		</developer>
+		<developer>
+			<id>mkucharek</id>
+			<name>Maciej Kucharek</name>
+		</developer>
+		<developer>
+			<id>Thopap</id>
+			<name>Thomas Papke</name>
+			<organization>InterComponentWare AG</organization>
+		</developer>
+		<developer>
+			<id>Bert-R</id>
+			<name>Bert Roos</name>
+		</developer>
+		<developer>
+			<id>zilin375</id>
+			<name>Zhe Wang</name>
+			<organization>Agfa Healthcare</organization>
+		</developer>
+		<developer>
+			<id>gematik-fue</id>
+			<name>gematik FuE</name>
+		</developer>
+		<developer>
+			<id>ibacher</id>
+			<name>Ian</name>
+		</developer>
 	</developers>
 
 	<licenses>
@@ -582,8 +644,10 @@
 
 	<properties>
 
-		<fhir_core_version>4.0.26-SNAPSHOT</fhir_core_version>
+		<fhir_core_version>4.2.10-SNAPSHOT</fhir_core_version>
 		<ucum_version>1.0.2</ucum_version>
+
+		<surefire_jvm_args>-Dfile.encoding=UTF-8 -Xmx2048m</surefire_jvm_args>
 
 		<!-- configure timestamp in MANIFEST.MF for maven-war-provider -->
 		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
@@ -605,9 +669,9 @@
 		<commons_lang3_version>3.9</commons_lang3_version>
 		<derby_version>10.14.2.0</derby_version>
 		<!--<derby_version>10.15.1.3</derby_version>-->
-		<error_prone_annotations_version>2.3.3</error_prone_annotations_version>
+		<error_prone_annotations_version>2.3.4</error_prone_annotations_version>
 		<error_prone_core_version>2.3.3</error_prone_core_version>
-		<guava_version>28.0-jre</guava_version>
+		<guava_version>28.2-jre</guava_version>
 		<gson_version>2.8.5</gson_version>
 		<jaxb_bundle_version>2.2.11_1</jaxb_bundle_version>
 		<jaxb_api_version>2.3.1</jaxb_api_version>
@@ -615,31 +679,32 @@
 		<jaxb_runtime_version>2.3.1</jaxb_runtime_version>
 		<jersey_version>2.25.1</jersey_version>
 		<!-- 9.4.17 seems to have issues -->
-		<jetty_version>9.4.14.v20181114</jetty_version>
+		<jetty_version>9.4.24.v20191120</jetty_version>
 		<jsr305_version>3.0.2</jsr305_version>
+		<flyway_version>6.4.1</flyway_version>
 		<!--<hibernate_version>5.2.10.Final</hibernate_version>-->
-		<hibernate_version>5.4.6.Final</hibernate_version>
+		<hibernate_version>5.4.14.Final</hibernate_version>
 		<!-- Update lucene version when you update hibernate-search version -->
-		<hibernate_search_version>5.11.3.Final</hibernate_search_version>
+		<hibernate_search_version>5.11.5.Final</hibernate_search_version>
 		<lucene_version>5.5.5</lucene_version>
-		<hibernate_validator_version>5.4.2.Final</hibernate_validator_version>
+		<hibernate_validator_version>6.1.3.Final</hibernate_validator_version>
 		<httpcore_version>4.4.11</httpcore_version>
 		<httpclient_version>4.5.9</httpclient_version>
-		<jackson_version>2.9.9</jackson_version>
-		<jackson_databind_version>2.9.10</jackson_databind_version>
+		<jackson_version>2.10.0</jackson_version>
+		<jackson_databind_version>2.10.0</jackson_databind_version>
 		<maven_assembly_plugin_version>3.1.0</maven_assembly_plugin_version>
 		<maven_license_plugin_version>1.8</maven_license_plugin_version>
 		<resteasy_version>4.0.0.Beta3</resteasy_version>
-		<ph_schematron_version>5.0.4</ph_schematron_version>
-		<ph_commons_version>9.1.1</ph_commons_version>
+		<ph_schematron_version>5.2.0</ph_schematron_version>
+		<ph_commons_version>9.3.8</ph_commons_version>
 		<plexus_compiler_api_version>2.8.5</plexus_compiler_api_version>
 		<servicemix_saxon_version>9.5.1-5_1</servicemix_saxon_version>
 		<servicemix_xmlresolver_version>1.2_5</servicemix_xmlresolver_version>
 		<slf4j_version>1.7.28</slf4j_version>
-		<spring_version>5.2.1.RELEASE</spring_version>
+		<spring_version>5.2.3.RELEASE</spring_version>
 		<!-- FYI: Spring Data JPA 2.1.9 causes test failures due to unexpected cascading deletes -->
 		<spring_data_version>2.2.0.RELEASE</spring_data_version>
-		<spring_boot_version>2.2.0.RELEASE</spring_boot_version>
+		<spring_boot_version>2.2.6.RELEASE</spring_boot_version>
 		<spring_retry_version>1.2.2.RELEASE</spring_retry_version>
 
 		<stax2_api_version>3.1.4</stax2_api_version>
@@ -652,6 +717,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<ebay_cors_filter_version>1.0.1</ebay_cors_filter_version>
 
+		<elastic_apm_version>1.13.0</elastic_apm_version>
 		<!-- Site properties -->
 		<fontawesomeVersion>5.4.1</fontawesomeVersion>
 	</properties>
@@ -711,7 +777,7 @@
 			<dependency>
 				<groupId>com.icegreen</groupId>
 				<artifactId>greenmail</artifactId>
-				<version>1.5.10</version>
+				<version>1.5.11</version>
 			</dependency>
 			<dependency>
 				<groupId>com.icegreen</groupId>
@@ -1010,6 +1076,11 @@
 				<version>${httpcore_version}</version>
 			</dependency>
 			<dependency>
+				<groupId>co.elastic.apm</groupId>
+				<artifactId>apm-agent-api</artifactId>
+				<version>${elastic_apm_version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.jena</groupId>
 				<artifactId>apache-jena-libs</artifactId>
 				<version>3.12.0</version>
@@ -1084,7 +1155,7 @@
 			<dependency>
 				<groupId>org.awaitility</groupId>
 				<artifactId>awaitility</artifactId>
-				<version>4.0.0-rc1</version>
+				<version>4.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
@@ -1241,14 +1312,25 @@
 				<artifactId>jscience</artifactId>
 				<version>4.3.1</version>
 			</dependency>
+			<!-- TODO: remove this once we're fully switched over to hamcrest 2.2 -->
 			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>java-hamcrest</artifactId>
 				<version>2.0.0.0</version>
 			</dependency>
 			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest</artifactId>
+				<version>2.2</version>
+			</dependency>
+			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
+				<version>${hibernate_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-java8</artifactId>
 				<version>${hibernate_version}</version>
 			</dependency>
 			<dependency>
@@ -1262,7 +1344,7 @@
 				<version>${hibernate_version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.hibernate</groupId>
+				<groupId>org.hibernate.validator</groupId>
 				<artifactId>hibernate-validator</artifactId>
 				<version>${hibernate_validator_version}</version>
 			</dependency>
@@ -1274,6 +1356,11 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-search-elasticsearch</artifactId>
+				<version>${hibernate_search_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-search-engine</artifactId>
 				<version>${hibernate_search_version}</version>
 			</dependency>
 			<dependency>
@@ -1289,17 +1376,17 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
-				<version>3.1.0</version>
+				<version>3.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.2.8</version>
+				<version>42.2.10</version>
 			</dependency>
 			<dependency>
 				<groupId>org.quartz-scheduler</groupId>
 				<artifactId>quartz</artifactId>
-				<version>2.3.1</version>
+				<version>2.3.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -1471,9 +1558,15 @@
 				<artifactId>xpp3_xpath</artifactId>
 				<version>1.1.4c</version>
 			</dependency>
+			<dependency>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-core</artifactId>
+				<version>${flyway_version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
+	<!--
 	<pluginRepositories>
 		<pluginRepository>
 			<id>ossrh</id>
@@ -1486,12 +1579,13 @@
 		<pluginRepository>
 			<id>maven2</id>
 			<name>Maven2</name>
-			<url>http://central.maven.org/maven2/</url>
+			<url>https://central.maven.org/maven2/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	-->
 
 	<build>
 		<pluginManagement>
@@ -1626,7 +1720,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>3.0.0-M3</version>
+					<version>3.0.0-M4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -1657,9 +1751,9 @@
 					<configuration>
 						<redirectTestOutputToFile>true</redirectTestOutputToFile>
 						<runOrder>random</runOrder>
-						<argLine>-Dfile.encoding=UTF-8 -Xmx1024m</argLine>
+						<argLine>@{argLine} ${surefire_jvm_args}</argLine>
 						<forkCount>1.0C</forkCount>
-                        <trimStackTrace>false</trimStackTrace>
+						<trimStackTrace>false</trimStackTrace>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -1680,7 +1774,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>animal-sniffer-maven-plugin</artifactId>
-					<version>1.16</version>
+					<version>1.18</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -1875,12 +1969,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.1.0</version>
 					<dependencies>
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
-							<version>8.18</version>
+							<version>8.29</version>
 						</dependency>
 					</dependencies>
 					<configuration>
@@ -1911,12 +2005,33 @@
 									<version>3.3.9</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>1.8</version>
+									<version>11</version>
 									<message>
-										The hapi-fhir Maven build requires JDK version 1.8.x.
+										HAPI FHIR is still targeting JDK 8 for published binaries, but we require JDK 11
+										to build and test this library.
 									</message>
 								</requireJavaVersion>
 							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>enforce-property</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireJavaVersion>
+									<version>11</version>
+								</requireJavaVersion>
+							</rules>
+							<fail>true</fail>
 						</configuration>
 					</execution>
 				</executions>
@@ -2238,6 +2353,21 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<configuration>
+					<dumpOnExit>true</dumpOnExit>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -2384,50 +2514,12 @@
 			</build>
 		</profile>
 		<profile>
-			<id>SITE</id>
-			<modules>
-				<module>hapi-fhir-base</module>
-				<module>hapi-fhir-structures-dstu2</module>
-				<module>hapi-fhir-structures-dstu3</module>
-				<module>hapi-fhir-structures-r4</module>
-				<module>hapi-fhir-structures-r5</module>
-				<module>hapi-fhir-client</module>
-				<module>hapi-fhir-server</module>
-				<module>hapi-fhir-jpaserver-model</module>
-				<module>hapi-fhir-jpaserver-searchparam</module>
-				<module>hapi-fhir-jpaserver-subscription</module>
-				<module>hapi-fhir-jpaserver-base</module>
-				<module>hapi-fhir-jaxrsserver-base</module>
-				<!-- <module>hapi-fhir-cobertura</module> -->
-				<module>examples</module>
-			</modules>
-			<reporting>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>findbugs-maven-plugin</artifactId>
-						<version>3.0.5</version>
-						<configuration>
-							<classFilesDirectory>./hapi-fhir-base/target/classes</classFilesDirectory>
-						</configuration>
-						<reportSets>
-							<reportSet>
-								<reports>
-									<report>findbugs</report>
-								</reports>
-							</reportSet>
-						</reportSets>
-					</plugin>
-				</plugins>
-			</reporting>
-		</profile>
-		<profile>
 			<id>ALLMODULES</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<modules>
-                <module>hapi-fhir-bom</module>
+            <module>hapi-fhir-bom</module>
 				<module>hapi-deployable-pom</module>
 				<module>hapi-fhir-base</module>
 				<module>hapi-fhir-docs</module>
@@ -2451,6 +2543,7 @@
 				<module>hapi-fhir-structures-r5</module>
 				<module>hapi-fhir-validation-resources-r5</module>
 				<module>hapi-fhir-igpacks</module>
+				<module>hapi-fhir-jpaserver-api</module>
 				<module>hapi-fhir-jpaserver-model</module>
 				<module>hapi-fhir-jpaserver-searchparam</module>
 				<module>hapi-fhir-jpaserver-subscription</module>
@@ -2465,7 +2558,6 @@
 				<module>hapi-fhir-android</module>
 				<module>hapi-fhir-cli</module>
 				<module>hapi-fhir-dist</module>
-				<module>examples</module>
 				<!--<module>osgi</module>-->
 				<!--<module>osgi/hapi-fhir-karaf-features</module>
 				<module>osgi/hapi-fhir-karaf-integration-tests</module>-->
@@ -2488,6 +2580,55 @@
 			<modules>
 				<module>hapi-fhir-jacoco</module>
 			</modules>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<configuration>
+							<dumpOnExit>true</dumpOnExit>
+						</configuration>
+						<executions>
+							<execution>
+								<id>default-prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>CI</id>
+			<properties>
+				<surefire_jvm_args>-Dfile.encoding=UTF-8 -Xmx2048m -XX:TieredStopAtLevel=1 -XX:+UseParallelGC -Xverify:none  -Dfile.encoding=UTF-8 -Xss128M -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=2048M</surefire_jvm_args>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-checkstyle-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>validate</id>
+								<phase>generate-sources</phase>
+								<configuration>
+									<configLocation>src/checkstyle/checkstyle_config_nofixmes.xml</configLocation>
+									<encoding>UTF-8</encoding>
+									<consoleOutput>true</consoleOutput>
+									<failOnViolation>true</failOnViolation>
+									<failsOnError>false</failsOnError>
+								</configuration>
+								<goals>
+									<goal>check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 		<profile>
 			<id>NOPARALLEL</id>
